# MicroStitch

./: .gitmodules  CITATION.cff  CMakeLists.txt  README.md  adjacency_matrix.f90  core.h  graphs.h  gui_file_dialog.h  img_manipulation.h  main.cc  matrix.h  matrix_test.c  ppt2json.py  quickshift.h  stitcher2map.py
scripts/: adjacency_matrix.f90  adjacency_matrixmodule.c  compute_phimap.py  helper.py  interactive.py  invert_cmap.py  merger.py  notes.md  npz2bin.py  sandbox.py
